--- a/ElevatorFall-Workspace/build.gradle
+++ b/ElevatorFall-Workspace/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
+        //google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
-        
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
     }
 }
@@ -21,7 +21,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "ElevatorFall"
-        gdxVersion = '1.9.8'
+        gdxVersion = '1.9.9-SNAPSHOT'
         roboVMVersion = '2.3.3'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
