Downgraded to gradle 3.3
The upgrade to 3.5 was a failure.
We now have to use Android Studio 2.2.3 because of LibGDX not supporting gradle 3.5 wich is mandatory in AS 3.0.1

--- a/ElevatorFall-Workspace/core/build.gradle
+++ b/ElevatorFall-Workspace/core/build.gradle
@@ -6,5 +6,5 @@ eclipse.project {
     name = appName + "-core"
 }
 dependencies {
-    compile files('C:/Eigene Dateien/Programmieren/Projekte/ElevatorFall/ElevatorFall-Workspace/libs/json-simple-1.1.1.jar')
+    compile fileTree(dir: '../libs', include: ['*.jar'])
 }
