--- a/ElevatorFall-Workspace/build.gradle
+++ b/ElevatorFall-Workspace/build.gradle
@@ -6,7 +6,6 @@ buildscript {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
-        //google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -21,7 +20,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "ElevatorFall"
-        gdxVersion = '1.9.9-SNAPSHOT'
+        gdxVersion = '1.9.8'
         roboVMVersion = '2.3.3'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
@@ -47,7 +46,6 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        
     }
 }
 
@@ -88,7 +86,6 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        
     }
 }
 
