--- a/ElevatorFall-Workspace/.gitignore
+++ b/ElevatorFall-Workspace/.gitignore
@@ -24,10 +24,10 @@ www-test/
 /android/libs/x86/
 /android/libs/x86_64/
 /android/gen/
-.idea/
-*.ipr
-*.iws
-*.iml
+## .idea/
+## *.ipr
+## *.iws
+## *.iml
 /android/out/
 com_crashlytics_export_strings.xml
 
