--- a/ElevatorFall-Workspace/android/AndroidManifest.xml
+++ b/ElevatorFall-Workspace/android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.thomaslienbacher.elevatorfall" >
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="25" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,7 @@
         <activity
             android:name="dev.thomaslienbacher.elevatorfall.AndroidLauncher"
             android:label="@string/app_name" 
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
