--- a/ElevatorFall-Workspace/android/build.gradle
+++ b/ElevatorFall-Workspace/android/build.gradle
@@ -19,10 +19,10 @@ android {
     }
     defaultConfig {
         applicationId "dev.thomaslienbacher.elevatorfall"
-        minSdkVersion 9
-        targetSdkVersion 21
+        minSdkVersion 21
+        targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "Prototype x.1"
     }
     buildTypes {
         release {
