--- a/ElevatorFall-Workspace/android/build.gradle
+++ b/ElevatorFall-Workspace/android/build.gradle
@@ -21,8 +21,9 @@ android {
         applicationId "dev.thomaslienbacher.elevatorfall"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 1
-        versionName "Prototype x.1"
+        versionCode 2
+        versionName '0.2'
+        versionNameSuffix 'Dev'
     }
     buildTypes {
         release {
@@ -133,5 +134,5 @@ idea {
     }
 }
 dependencies {
-    compile fileTree(dir: '../libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: '../libs')
 }
